--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
 
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>什么时候才能回家啊</title>
+<style type="text/css">
+body,td,th 
+	#id {
+}
+</style>
+</head>
+
+<body>
+<h1>今天12月14号了 </h1>
+<p>再坚持一下</p>
+<h2>还有<span style="color: #F00">33</span>天</h2>
+<p>我就可以</p>
+<p>回家了</p>
+<h3>重庆火锅我来啦！！！！</h3>
+<p>这边的东西真难吃啊乱七八糟</p>
+<audio controls>
+  <source src="Kalimba.mp3" type="audio/mp3">
+</audio>
+</body>
+</html>
