--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,21 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>好像对你说</title>
+<style type="text/css">
+body {
+	background-image: url(bk.jpg);
+	background-size:100% 100%;
+}
+#biaobai {
+	font-size: 136px;
+	text-align:center;
+	margin:140px;
+	color:red;
+}
+</style></head>
 
+<body id="biaobai">
+我们一起吃饭吧，你请客，我等好久啦~
+</body>
+</html>
