--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
-
-<!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>什么时候才能回家啊</title>
 <style type="text/css">
-body,td,th 
-	#id {
+body {
+	background-image: url(bk.jpg);
+	background-size:100% 100%;
 }
-</style>
-</head>
+#biaobai {
+	font-size: 136px;
+	text-align:center;
+	margin:140px;
+	color:red;
+}
+</style></head>
 
-<body>
-<h1>今天12月14号了 </h1>
+<body id="biaobai">
+	
+我们一起吃饭吧，你请客，我等好久啦~
+	<h1>今天12月14号了 </h1>
 <p>再坚持一下</p>
 <h2>还有<span style="color: #F00">33</span>天</h2>
 <p>我就可以</p>
